rationalise parameter handling